--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </ul>
             -->
             <small>
-                <a href="">Open-Source code</a>, by Leticia Amorim
+                <a href="https://github.com/leticiaamorimd/shecodes_weather">Open-Source code</a>, by Leticia Amorim
               </small>
           </div>
          
