--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             <div class="col-3 align-self-center">
               <ul>
                 <li id="weather-description">Sunny</li>
-                <li id="daily-minmax-temp">Max Temperature: 8°</li>
-                <li id="daily-minmax-temp">Min Temperature: 2°</li>
+                <li id="daily-max-temp">Max Temperature: 8°</li>
+                <li id="daily-min-temp">Min Temperature: 2°</li>
                 <li id="humidity-level">Humidity: 80%</li>
                 <li id="wind-speed">Wind: 5m/s</li>
                
@@ -148,7 +148,7 @@
             </ul>
             -->
             <small>
-                <a href="https://github.com/leticiaamorimd/shecodes_weather">Open-Source code</a>, by Leticia Amorim
+                <a href="">Open-Source code</a>, by Leticia Amorim
               </small>
           </div>
          
