--- a/index.html
+++ b/index.html
@@ -67,12 +67,11 @@
             </div>
             <div class="col-3 align-self-center">
                 <img class="current-icon" src="https://openweathermap.org/img/wn/02n@2x.png" ;="" id="current-icon">
-                <span class="current-temp" id="current-temp"> 18 </span><a href="#" id="celsius-link" class="active"> ℃ </a>|<a
-                  href="#"
-                  id="fahrenheit-link"
-                  >℉</a
-                ></span
-              >
+                <span class="current-temp" id="current-temp"> 18 </span>
+                <strong id="temperature"></strong
+                  ><span class="units"
+                    ><a href="#" id="celsius-link" class="active">°C</a> |
+                    <a href="#" id="fahrenheit-link">°F</a></span>
             </div>
             <div class="col-3 align-self-center">
               <ul>
