--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <div class="col-3 align-self-center">
               <ul>
                 <li id="weather-description">Sunny</li>
-                <li id="daily-max-temp">Max Temperature: 8°</li>
-                <li id="daily-min-temp">Min Temperature: 2°</li>
+                <li id="daily-max-temp">H: 8°</li>
+                <li id="daily-min-temp">L: 2°</li>
                 <li id="humidity-level">Humidity: 80%</li>
                 <li id="wind-speed">Wind: 5m/s</li>
                
@@ -85,72 +85,10 @@
             </div>
           </div>
         </div>
-        <!--
-        <div
-          class="row rounded bg-light shadow-sm mx-auto p-3 upcoming-forecast"
-          id="forecast"
-        >
-          <div class="col">
-            <h3>00:00</h3>
-            <img src="https://openweathermap.org/img/wn/02n@2x.png">
-            <ul>
-              <li id="temp">10°</li>
-            </ul>
-          </div>
-          <div class="col">
-            <h3>03:00</h3>
-            <img src="https://openweathermap.org/img/wn/02n@2x.png">
-            <ul>
-              <li id="temp">2°</li>
-            </ul>
-          </div>
-          <div class="col">
-            <h3>06:00</h3>
-            <img src="https://openweathermap.org/img/wn/02n@2x.png">
-            <ul>
-              <li id="temp">10°</li>
-            </ul>
-          </div>
-          <div class="col">
-            <h3>09:00</h3>
-            <img src="https://openweathermap.org/img/wn/02n@2x.png">
-            <ul>
-              <li id="temp">10°</li>
-            </ul>
-          </div>
-          <div class="col">
-            <h3>12:00</h3>
-            <img src="https://openweathermap.org/img/wn/02n@2x.png">
-            <ul>
-              <li id="temp">2°</li>
-            </ul>
-          </div>
-          <div class="col">
-            <h3>15:00</h3>
-            <img src="https://openweathermap.org/img/wn/02n@2x.png">
-            <ul>
-              <li id="temp">10°</li>
-            </ul>
-          </div>
-          <div class="col">
-            <h3>18:00</h3>
-            <img src="https://openweathermap.org/img/wn/02n@2x.png">
-            <ul>
-              <li id="temp">10°</li>
-            </ul>
-          </div>
-          <div class="col">
-            <h3>21:00</h3>
-            <img src="https://openweathermap.org/img/wn/02n@2x.png">
-            <ul>
-              <li id="temp">10°</li>
-            </ul>
-            -->
             <small>
                 <a href="https://github.com/leticiaamorimd/shecodes_weather">Open-Source code</a>, by Leticia Amorim
               </small>
-          </div>
-         
+           </div>       
         </div>
       </div>
     </div>
