--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
         </div>
             <small>
-                <a href="https://github.com/leticiaamorimd/shecodes_weather">Open-Source code</a>, by Leticia Amorim
+                <a href="https://github.com/leticiaamorimd/shecodes_weather">Open-Source code</a>, by Leticia Behar
               </small>
            </div>       
         </div>
